--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-midnight
-desceiption: www.ttdpatch.de/grfspecs/m4nfoManual
+description: translation www.ttdpatch.de/grfspecs/m4nfoManual
